Bug 1528743 - Move the top-layer display items inside the async zoom container. r=mstange

This maintains the important invariant that layers that carry scroll metadata
for the RCD-RSF are inside the async zoom container.

Differential Revision: https://phabricator.services.mozilla.com/D22049